S20-238, getch check result handler was added
